--- a/findroommate/templates/displaylist.html
+++ b/findroommate/templates/displaylist.html
@@ -9,6 +9,7 @@
                 <h5 class="card-title"> {{ user.name }}</h5>
                 <p class="card-text">{{ user.age }}</p>
                 <p class="card-text">{{ user.avgrating }}</p>
+                <p class="card-text">Compatibility score based on apartment pref: {{ user.compatibilityscore }}%</p>
                 <a href="/displaycommunity/" class="btn btn-primary">View</a>
             </div>
         </div>
