--- a/viewrateusers/templates/userdetails.html
+++ b/viewrateusers/templates/userdetails.html
@@ -1,4 +1,27 @@
 {% extends 'dearcomradehome/base.html' %}
 {% block content %}
-    User details
+{% if users %}
+<div class="row">
+    {% for potentialuser in users %}
+    <div class="col">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="{{ user.profilepicurl }}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title"> {{ potentialuser.fname }}</h5>
+                <h5 class="card-title"> {{ potentialuser.lname }}</h5>
+                <p class="card-text">{{ potentialuser.age }}</p>
+                <p class="card-text">{{ potentialuser.country }}</p>
+                <form method="POST" action="/viewrateusers/displayuser/">
+                    {% csrf_token %}
+                    <input type="hidden" name="userid" value="{{ potentialuser.userid }}">
+                    <input type="submit" value="View/Rate">
+                </form>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+{% else %}
+{{message}}
+{% endif %}
 {% endblock %}
