--- a/dearcomradehome/templates/dearcomradehome/communitybase.html
+++ b/dearcomradehome/templates/dearcomradehome/communitybase.html
@@ -29,20 +29,13 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               {% if user.is_authenticated %}
-              <a class="nav-item nav-link" href="/findroommate">Find Roommate</a>
-              <a class="nav-item nav-link" href="/findcommunity">Communities</a>
               <a class="nav-item nav-link" href="/viewrateusers">Search/Rate Users</a>
               {% endif %}
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-              {% else %}
-                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-              {% endif %}
             </div>
           </div>
         </div>
@@ -54,7 +47,7 @@
           {% block content %}{% endblock %}
         </div>
         </div>
-
+      </div>
     </main>
 
     <!-- Optional JavaScript -->
