--- a/users/templates/users/communityregistration.html
+++ b/users/templates/users/communityregistration.html
@@ -10,11 +10,14 @@
             <select class="form-control" name="community">
                 <option selected>Choose...</option>
                 {% for community in communities %}
-                <option> {{community.name}} </option>
+                <option > {{community.name}} </option>
                 {% endfor %}
             </select>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+
 </form>
 {% endblock %}
