--- a/users/templates/users/userprefregistration.html
+++ b/users/templates/users/userprefregistration.html
@@ -24,9 +24,9 @@
             <label class="mr-sm-2" for="usersex">User Sex </label>
             <select class="custom-select mr-sm-2" name="usersex" placeholder="male/female">
                 <option selected>Choose...</option>
-                <option value="1">Male</option>
-                <option value="2">Female</option>
-                <option value="3">Prefer Not to Say</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="na">Prefer Not to Say</option>
             </select>
         </div>
         <div class="form-group"> <!--class="form-row"-->
