--- a/community/templates/displaycommunity.html
+++ b/community/templates/displaycommunity.html
@@ -3,19 +3,19 @@
 {% if community %}
 <div class="card text-center">
     <div class="card-body">
-        <h5 class="card-title">{{community.name}}</h5>
-        <div class="row">
-            <div class="column">
-                <h4 class="card-text">{{community.addr1}} </h4>
+        <h5 class="card-title">Name: {{community.name}}</h5>
+
+            <div  align="center">
+                <h5 class="card-text">Addr: {{community.addr1}} </h5>
             </div>
-            <div class="column">
-                <h4 class="card-text">{{community.addr2}} </h4>
+            <div  align="center">
+                <h5 class="card-text">{{community.addr2}} </h5>
             </div>
-        </div>
-        <h4 class="card-text"> {{community.avgrent}}</h4>
-        <h4 class="card-text"> {{community.phnumber}}</h4>
-        <p class="card-text">{{community.description}}</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+
+        <h5 class="card-text">Rent: {{community.avgrent}}$</h5>
+        <h5 class="card-text">PhNo: {{community.phnumber}}</h5>
+        <h5 class="card-text">Desc: {{community.description}}</h5>
+<!--        <a href="#" class="btn btn-primary">Go somewhere</a>-->
     </div>
 </div>
 {% else %}
