--- a/findroommate/templates/displaylist.html
+++ b/findroommate/templates/displaylist.html
@@ -4,7 +4,7 @@
     {% for user in users %}
     <div class="col">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="{{ user.profilepicurl }}" alt="Card image cap">
+<!--            <img class="card-img-top" src="{{ user.profilepicurl }}" alt="Card image cap">-->
             <div class="card-body">
                 <h5 class="card-title"> {{ user.name }}</h5>
                 <p class="card-text">{{ user.age }}</p>
