--- a/dearcomradehome/templates/dearcomradehome/home.html
+++ b/dearcomradehome/templates/dearcomradehome/home.html
@@ -1,4 +1,9 @@
 {% extends "dearcomradehome/base.html" %}
 {% block content %}
-
+    <h1>Welcome to DearComrade!</h1>
+    <br>
+    <p>
+        Please select the appropriate tab and proceed.
+        Happy roommate finding!!!
+    </p>
 {% endblock content %}
