--- a/findroommate/templates/findroommate.html
+++ b/findroommate/templates/findroommate.html
@@ -21,6 +21,11 @@ Select a city to find a roommate
                 <option selected disabled>Choose...</option>
                 <option value="New York"> New York</option>
                 <option value="Tempe"> Tempe</option>
+                <option value="Phoenix"> Phoenix</option>
+                <option value="Boston"> Boston</option>
+                <option value="Chicacgo"> Chicacgo</option>
+                <option value="Seattle"> Seattle</option>
+                <option value="LA"> LA</option>
             </select>
         </div>
         <div class="form-group col-md-2">
