--- a/users/templates/users/userregistration.html
+++ b/users/templates/users/userregistration.html
@@ -17,8 +17,8 @@
         </div>
         <div class="form-group"> <!--class="form-row"-->
             <label for="phonenumber">Phone Number</label>
-            <input type="text" pattern="\d*" maxlength="10" class="form-control" minlength="11" id="phone"
-                   name="phonenumber" placeholder="+18346571234" required>
+            <input type="text" pattern="\d*" maxlength="10" class="form-control" minlength="10" id="phone"
+                   name="phonenumber" placeholder="8346571234" required>
             <!--<input type="tel" id="phone" name="phonenumber" placeholder="8346571234"  required>-->
 
         </div>
